--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,32 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.navigation {
+  width: 100%;
+  padding: 1.2rem 0;
+  background-color: #F6F6F6;
+}
+.navigation .nav-text {
+  max-width: 800px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.navigation .nav-text h1 {
+  font-size: 4rem;
+  padding-bottom: 2rem;
+}
+.navigation .nav-text nav {
+  width: 37.5rem;
+  display: flex;
+  justify-content: space-between;
+}
+.navigation .nav-text nav a {
+  color: #454A59;
+  font-size: 1.6rem;
+  text-decoration: none;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
