--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,33 @@
 // Navigation code here
+
+.navigation {
+    width: 100%;
+    padding: 1.2rem 0;
+    background-color: @nav-bg;
+
+    .nav-text {
+        max-width: 800px;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        h1 {
+            font-size: 4rem;
+            padding-bottom: 2rem;
+        }
+
+        nav {
+            width: 37.5rem;
+            display: flex;
+            justify-content: space-between;
+
+            a {
+                color: @nav-font;
+                font-size: 1.6rem;
+                text-decoration: none;
+            }
+        }
+    }
+
+}
