--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,12 @@
 // Mixins Here
+
+.btn-style(@bg-color, @txt-color, @width) {
+    background-color: @bg-color;
+    color: @txt-color;
+    border-radius: 5px;
+    width: @width;
+    font-size: 1.8rem;
+    text-align: center;
+    padding-top: 1rem;
+    padding-bottom: 0.8rem;
+}
