--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,6 +4,7 @@
     width: 100%;
     padding: 1.2rem 0;
     background-color: @nav-bg;
+    border-bottom: 2px solid @nav-border;
 
     .nav-text {
         max-width: 800px;
