--- a/less/mixins.less
+++ b/less/mixins.less
@@ -9,4 +9,9 @@
     text-align: center;
     padding-top: 1rem;
     padding-bottom: 0.8rem;
+
+    &:hover {
+        background-color: @txt-color;
+        color: @bg-color;
+    }
 }
