--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,7 @@ p {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
 }
 .navigation .nav-text h1 {
@@ -179,7 +180,9 @@ p {
 .navigation .nav-text nav {
   width: 37.5rem;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
+  align-items: unset;
 }
 .navigation .nav-text nav a {
   color: #454A59;
@@ -250,6 +253,7 @@ footer {
   text-align: center;
   padding-top: 1rem;
   padding-bottom: 0.8rem;
+  cursor: pointer;
 }
 .home .walk .walk-text .btn:hover {
   background-color: #F6F7F8;
