--- a/less/mixins.less
+++ b/less/mixins.less
@@ -9,9 +9,17 @@
     text-align: center;
     padding-top: 1rem;
     padding-bottom: 0.8rem;
+    cursor: pointer;
 
     &:hover {
         background-color: @txt-color;
         color: @bg-color;
     }
+}
+
+.flex(@direction, @justify, @align) {
+    display: flex;
+    flex-direction: @direction;
+    justify-content: @justify;
+    align-items: @align;
 }
