--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,9 +8,7 @@
 
     .nav-text {
         margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        .flex(column, flex-start, center);
 
         h1 {
             font-size: 4rem;
@@ -19,8 +17,7 @@
 
         nav {
             width: 37.5rem;
-            display: flex;
-            justify-content: space-between;
+            .flex(row, space-between, unset);
 
             a {
                 color: @nav-font;
