--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,6 +6,10 @@
 
     img {
       border-radius: 5px;
+
+      @media @phone {
+        width: 100%;
+      }
     }
 
     h2 {
@@ -28,6 +32,21 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      &:first-child {
+
+        @media @phone {
+        width: 90%;
+        margin: 20px auto;
+        }
+      }
+
+      &:nth-of-type(2), &:last-child {
+
+        @media @phone {
+          display: none;
+        }
+      }
     }
   }
 
@@ -50,8 +69,19 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      margin-top: 20px;
+      flex-direction: column-reverse;
+      align-items: center;
+      padding: 20px;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @phone {
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -63,13 +93,23 @@
 
       .btn {
 
-        .btn-style(@btn-bg-color, @porcelain, 10rem);
+        .btn-style(@btn-bg-color, @porcelain, 10rem, 1rem, 0.8rem);
+
+        @media @phone {
+          .btn-style(@btn-bg-color, @porcelain, 100%, 2.7rem, 2.7rem);
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        width: 100%;
+        margin-left: unset;
+        margin-bottom: 20px;
+      }
       
       img {
         width: 100%;
