added mixin for phone media query 100width

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -23,3 +23,10 @@
     justify-content: @justify;
     align-items: @align;
 }
+
+.phone-100w() {
+    
+    @media @phone {
+        width: 100%;
+      }
+}
