--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,9 +7,7 @@
     img {
       border-radius: 5px;
 
-      @media @phone {
-        width: 100%;
-      }
+      .phone-100w();
     }
 
     h2 {
@@ -79,9 +77,7 @@
     .walk-text {
       width: 50%;
 
-      @media @phone {
-        width: 100%;
-      }
+      .phone-100w();
 
       h3 {
         margin-bottom: 10px;
