--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,8 +3,11 @@
 .navigation {
     width: 100%;
     padding: 1.2rem 0;
-    background-color: @nav-bg;
+    background-color: fade(@nav-bg, 90%);
     border-bottom: 2px solid @nav-border;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 
     .nav-text {
         margin: 0 auto;
