--- a/css/index.css
+++ b/css/index.css
@@ -325,3 +325,72 @@ footer {
   height: auto;
   border-radius: 10px;
 }
+.home .subscribe {
+  border-top: 1px solid #dee2e6;
+  padding: 40px 15px;
+}
+.home .subscribe h3 {
+  margin-bottom: 20px;
+}
+.home .subscribe form {
+  width: 75%;
+  margin: 0 auto;
+  padding: 30px 5%;
+  text-align: center;
+  background-color: #F6F6F6;
+  border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .subscribe form {
+    width: 100%;
+  }
+}
+.home .subscribe form input[type=text] {
+  width: 100%;
+  padding: 7px 0 7px 4px;
+  margin-bottom: 15px;
+  border: 1px solid #dee2e6;
+  border-radius: 5px;
+}
+.home .subscribe form input[name=first-name],
+.home .subscribe form input[name="state"] {
+  margin-right: 10px;
+}
+.home .subscribe form .name,
+.home .subscribe form .state-zip {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.home .subscribe form .street-city {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.home .subscribe form input[type="submit"] {
+  margin-top: 10px;
+  background-color: #22283A;
+  color: #F6F7F8;
+  border-radius: 5px;
+  width: 150px;
+  font-size: 1.8rem;
+  text-align: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  cursor: pointer;
+  border: 0;
+}
+.home .subscribe form input[type="submit"]:hover {
+  background-color: #F6F7F8;
+  color: #22283A;
+}
+@media (max-width: 500px) {
+  .home .subscribe form input[type="submit"] {
+    width: 100%;
+  }
+}
+.home .subscribe form input[type="submit"]:hover {
+  border: 1px solid #22283A;
+}
