--- a/css/index.css
+++ b/css/index.css
@@ -394,3 +394,45 @@ footer {
 .home .subscribe form input[type="submit"]:hover {
   border: 1px solid #22283A;
 }
+.about .head-img {
+  height: 200px;
+  overflow: hidden;
+  border-radius: 5px;
+}
+.about .head-img img {
+  max-width: 100%;
+  height: auto;
+  margin-top: -180px;
+}
+.about .about-text {
+  margin: 30px 0;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #dee2e6;
+}
+.about .about-text h2 {
+  margin-bottom: 10px;
+}
+.about .story {
+  width: 90%;
+  margin: 0 auto 40px;
+  padding: 20px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.about .story .story-text {
+  width: 50%;
+}
+.about .story .story-text h3,
+.about .story .story-text p {
+  margin-bottom: 10px;
+}
+.about .story .story-img {
+  width: 46%;
+  margin-left: 4%;
+}
+.about .story .story-img img {
+  max-width: 100%;
+  border-radius: 10px;
+}
